--- a/app/src/main/res/layout/item_my_bids_list.xml
+++ b/app/src/main/res/layout/item_my_bids_list.xml
@@ -29,7 +29,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/padding_middle"
                 android:layout_marginTop="@dimen/padding_middle"
-                app:constraint_referenced_ids="status"
+                app:constraint_referenced_ids="bidStatus,status"
                 app:flow_horizontalBias="0"
                 app:flow_horizontalGap="@dimen/padding_small"
                 app:flow_horizontalStyle="packed"
@@ -40,10 +40,23 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
+                android:id="@+id/bidStatus"
+                style="@style/TextStyle.Type.Bold"
+                android:layout_width="wrap_content"
+                android:drawableStart="@drawable/bid_small"
+                android:drawablePadding="@dimen/padding_small"
+                android:layout_height="wrap_content"
+                android:background="@drawable/back_bid_status"
+                android:textColor="?textColorPrimary"
+                tools:text="Активна" />
+
+            <TextView
                 android:id="@+id/status"
                 style="@style/TextStyle.Type.Bold"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:drawableStart="@drawable/project_small"
+                android:drawablePadding="@dimen/padding_small"
                 android:background="@drawable/back_status"
                 android:textColor="?textColorPrimary"
                 tools:text="Закрыт без выполнения" />
