--- a/app/src/main/res/menu/menu_navigation.xml
+++ b/app/src/main/res/menu/menu_navigation.xml
@@ -54,9 +54,15 @@
             android:id="@+id/menu_settings"
             android:icon="@drawable/settings"
             android:title="@string/settings" />
+
+        <item
+            android:id="@+id/menu_about"
+            android:icon="@drawable/about"
+            android:title="@string/about" />
         <item
             android:id="@+id/menu_logout"
             android:icon="@drawable/logout"
+            android:visible="false"
             android:title="@string/logout" />
     </group>
 
