--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -4,5 +4,6 @@
     <attr name="iconColor" format="color|reference" />
     <attr name="textColorPrimary" format="color|reference" />
     <attr name="textColorSecondary" format="color|reference" />
+    <attr name="menuItemTextColor" format="color|reference" />
 
 </resources>
