--- a/app/src/main/res/layout/item_feed_list.xml
+++ b/app/src/main/res/layout/item_feed_list.xml
@@ -77,8 +77,7 @@
                 android:layout_width="24dp"
                 android:layout_height="24dp"
                 app:layout_constraintEnd_toEndOf="@id/createdAt"
-                app:layout_constraintBottom_toBottomOf="@id/login"
-                app:layout_constraintTop_toTopOf="@id/login"
+                app:layout_constraintTop_toTopOf="@id/flow"
                 app:srcCompat="@drawable/new_icon" />
 
             <TextView
@@ -87,13 +86,15 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/padding_middle"
+                android:layout_marginStart="@dimen/padding_middle"
                 android:background="@drawable/type"
-                android:drawableStart="@drawable/time"
+                android:drawableStart="@drawable/project_small"
+                android:drawablePadding="@dimen/padding_small"
                 android:ellipsize="end"
                 android:textColor="?textColorPrimary"
                 app:layout_constraintEnd_toStartOf="@id/createdAt"
                 app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toStartOf="@id/avatar"
+                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 tools:text="Новый проект" />
 
