--- a/app/src/main/res/layout/item_thread_message.xml
+++ b/app/src/main/res/layout/item_thread_message.xml
@@ -32,6 +32,7 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="10dp"
             android:textColor="?textColorSecondary"
+            android:textIsSelectable="true"
             android:textSize="17sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0"
