--- a/app/src/main/res/layout/item_thread_message_my.xml
+++ b/app/src/main/res/layout/item_thread_message_my.xml
@@ -43,6 +43,7 @@
             android:layout_marginEnd="10dp"
             android:textColor="?textColorPrimary"
             android:textSize="17sp"
+            android:textColorLink="@color/white"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0"
             app:layout_constraintStart_toStartOf="parent"
