--- a/app/src/main/res/layout/bottom_menu_create_thread.xml
+++ b/app/src/main/res/layout/bottom_menu_create_thread.xml
@@ -13,9 +13,9 @@
         android:layout_marginStart="@dimen/padding_middle"
         android:layout_marginTop="@dimen/padding_standart"
         android:layout_marginEnd="@dimen/padding_middle"
-        android:drawableStart="@drawable/mail"
-        android:gravity="center_vertical"
+        android:drawableStart="@drawable/new_mail"
         android:drawablePadding="@dimen/padding_middle"
+        android:gravity="center_vertical"
         android:text="@string/create_thread"
         android:textAllCaps="true"
         android:textColor="?android:textColorPrimary"
@@ -28,11 +28,10 @@
         android:id="@+id/subject"
         android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:hint="@string/thread"
-        android:lines="1"
-        android:maxLines="1"
-        android:paddingTop="0dp"
         android:layout_marginTop="@dimen/padding_standart"
+        android:hint="@string/thread"
+        android:imeOptions="actionNext"
+        android:inputType="text"
         android:textAppearance="@style/TextStyle.Chat.Text"
         app:layout_constraintEnd_toEndOf="@id/createThreadTitle"
         app:layout_constraintStart_toStartOf="@id/createThreadTitle"
@@ -43,7 +42,7 @@
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:hint="@string/type_here"
-        android:lines="3"
+        android:lines="4"
         android:paddingTop="0dp"
         android:textAppearance="@style/TextStyle.Chat.Text"
         app:layout_constraintEnd_toEndOf="@id/createThreadTitle"
