--- a/app/src/main/res/layout/appbar.xml
+++ b/app/src/main/res/layout/appbar.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:fitsSystemWindows="false"
     android:theme="@style/ActionBarTheme">
 
@@ -12,6 +13,9 @@
         android:layout_height="wrap_content"
         android:background="?attr/colorPrimary"
         android:minHeight="?attr/actionBarSize"
+        app:titleTextAppearance="@style/TextStyle.Appbar.Title"
+        app:subtitleTextAppearance="@style/TextStyle.Appbar.Subtitle"
+        app:contentInsetStartWithNavigation="0dp"
         tools:title="@string/app_name">
 
         <androidx.core.widget.ContentLoadingProgressBar
