--- a/app/src/main/res/layout/item_menu_item.xml
+++ b/app/src/main/res/layout/item_menu_item.xml
@@ -11,7 +11,7 @@
         android:id="@+id/icon"
         android:layout_width="32dp"
         android:layout_height="32dp"
-        android:layout_marginStart="@dimen/padding_standart"
+        android:layout_marginStart="@dimen/padding_middle"
         android:layout_marginTop="@dimen/padding_middle"
         android:layout_marginBottom="@dimen/padding_middle"
         app:layout_constraintBottom_toBottomOf="parent"
