--- a/app/src/main/res/layout/fragment_pager_project_bids.xml
+++ b/app/src/main/res/layout/fragment_pager_project_bids.xml
@@ -4,15 +4,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/bidsContainer"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:background="@color/cardview_light_background">
+    android:layout_height="wrap_content"
+    android:background="@color/cardview_light_background"
+    android:orientation="vertical">
 
     <com.google.android.material.button.MaterialButtonToggleGroup
         android:id="@+id/group"
-        android:layout_gravity="center_horizontal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
         app:singleSelection="true">
 
         <com.google.android.material.button.MaterialButton
