--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -16,7 +16,7 @@
 
     <androidx.cardview.widget.CardView
         app:layout_constraintHeight_default="percent"
-        app:layout_constraintHeight_percent=".75"
+        app:layout_constraintHeight_percent=".7"
         android:id="@+id/cardView"
         app:cardBackgroundColor="@color/htransparent"
         android:layout_width="0dp"
@@ -36,6 +36,7 @@
             android:orientation="vertical">
 
             <androidx.appcompat.widget.AppCompatImageView
+                android:layout_weight="1"
                 android:id="@+id/icon"
                 android:layout_width="144dp"
                 android:layout_height="144dp"
@@ -44,19 +45,19 @@
                  />
 
             <TextView
+                android:layout_weight="1"
                 android:id="@+id/authCodeHint"
                 style="@style/TextStyle.Title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center|top"
-                android:layout_marginTop="40dp"
-                android:layout_marginBottom="40dp"
+                android:layout_gravity="center"
                 android:autoLink="web"
-                android:gravity="center_horizontal"
+                android:gravity="center"
                 android:text="@string/login_hint"
                 android:textSize="20sp" />
 
             <LinearLayout
+                android:layout_weight="1"
                 android:id="@+id/codeView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
