--- a/app/src/main/res/layout/fragment_pager_employer_overview.xml
+++ b/app/src/main/res/layout/fragment_pager_employer_overview.xml
@@ -254,7 +254,7 @@
                         app:layout_constraintStart_toStartOf="@+id/summaryTitle" />
 
 
-                    <org.sufficientlysecure.htmltextview.HtmlTextView
+                    <tech.hombre.freelancehunt.common.widgets.CustomHtmlTextView
                         android:id="@+id/summary"
                         style="@style/TextStyle.Title"
                         android:layout_width="match_parent"
