--- a/app/src/main/res/layout/fragment_pager_employer_reviews.xml
+++ b/app/src/main/res/layout/fragment_pager_employer_reviews.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <androidx.recyclerview.widget.RecyclerView
+    <tech.hombre.freelancehunt.common.widgets.ControlledRecyclerView
         android:id="@+id/list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
