--- a/app/src/main/res/layout-land/activity_login.xml
+++ b/app/src/main/res/layout-land/activity_login.xml
@@ -68,6 +68,7 @@
                     android:layout_marginEnd="@dimen/padding_standart"
                     android:translationZ="8dp"
                     android:background="@drawable/token_input"
+                    android:digits="0,1,2,3,4,5,6,7,8,9,*,qwertzuiopasdfghjklyxcvbnm"
                     android:ellipsize="end"
                     android:gravity="center"
                     android:hint="@string/token_hint"
