--- a/app/src/main/res/layout/item_contest_comments_list.xml
+++ b/app/src/main/res/layout/item_contest_comments_list.xml
@@ -14,7 +14,18 @@
         app:cardElevation="2dp"
         app:cardUseCompatPadding="true">
 
+        <TextView
+            android:id="@+id/deletedComment"
+            style="@style/TextStyle.Hidden"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_margin="@dimen/padding_middle"
+            android:gravity="center"
+            android:text="@string/comment_is_deleted"
+            android:visibility="gone" />
+
         <androidx.constraintlayout.widget.ConstraintLayout
+            android:visibility="visible"
             android:id="@+id/clickableView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -57,7 +68,7 @@
                 app:layout_constraintTop_toTopOf="@id/avatar"
                 tools:text="Час назад" />
 
-            <TextView
+            <tech.hombre.freelancehunt.common.widgets.CustomHtmlTextView
                 android:id="@+id/comment"
                 style="@style/TextStyle.Title"
                 android:layout_width="0dp"
