--- a/app/src/main/res/menu/menu_freelancer.xml
+++ b/app/src/main/res/menu/menu_freelancer.xml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
+    <item
+        android:id="@+id/action_open"
+        android:icon="@drawable/web"
+        android:title="@string/open_in_browser" />
 
     <item
         android:id="@+id/action_share"
