--- a/app/src/main/res/menu/menu_project.xml
+++ b/app/src/main/res/menu/menu_project.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
+        android:id="@+id/action_open"
+        android:icon="@drawable/web"
+        android:title="@string/open_in_browser" />
+
+    <item
         android:id="@+id/action_share"
         android:icon="@drawable/share"
         android:title="@string/share" />
-
-    <item
-        android:id="@+id/action_message"
-        android:icon="@drawable/message"
-        android:title="@string/message" />
 
 </menu>
