--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -1,60 +1,60 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string-array name="ending_applications">
-        <item>участник</item>
-        <item>участника</item>
-        <item>участников</item>
+        <item>application</item>
+        <item>applications</item>
+        <item>applications</item>
     </string-array>
 
     <string-array name="ending_messages">
-        <item>сообщение</item>
-        <item>сообщения</item>
-        <item>сообщений</item>
+        <item>message</item>
+        <item>messages</item>
+        <item>messages</item>
     </string-array>
 
     <string-array name="ending_days">
-        <item>день</item>
-        <item>дня</item>
-        <item>дней</item>
+        <item>day</item>
+        <item>days</item>
+        <item>days</item>
     </string-array>
 
     <string-array name="ending_weeks">
-        <item>неделя</item>
-        <item>недели</item>
-        <item>недель</item>
+        <item>week</item>
+        <item>weeks</item>
+        <item>weeks</item>
     </string-array>
 
     <string-array name="ending_month">
-        <item>месяц</item>
-        <item>месяца</item>
-        <item>месяцев</item>
+        <item>month</item>
+        <item>month</item>
+        <item>months</item>
     </string-array>
 
     <string-array name="ending_years">
-        <item>год</item>
-        <item>года</item>
-        <item>лет</item>
+        <item>year</item>
+        <item>years</item>
+        <item>years</item>
     </string-array>
 
     <string-array name="ending_hours">
-        <item>час</item>
-        <item>часа</item>
-        <item>часов</item>
+        <item>hour</item>
+        <item>hours</item>
+        <item>hours</item>
     </string-array>
 
     <string-array name="ending_minutes">
-        <item>минута</item>
-        <item>минуты</item>
-        <item>минут</item>
+        <item>minute</item>
+        <item>minutes</item>
+        <item>minutes</item>
     </string-array>
 
     <string-array name="pref_notifications_period_entries">
-        <item>Каждые 15 минут</item>
-        <item>Каждые полчаса</item>
-        <item>Раз в час</item>
-        <item>Каждые два часа</item>
-        <item>Два раза в день</item>
-        <item>Один раз в день</item>
+        <item>Every 15 minutes</item>
+        <item>Every half hour</item>
+        <item>Once an hour</item>
+        <item>Every two hours</item>
+        <item>Twice a day</item>
+        <item>Once a day</item>
     </string-array>
 
     <string-array name="pref_notifications_interval_values">
@@ -67,15 +67,15 @@
     </string-array>
 
     <string-array name="cost_entries">
-        <item>₴ (гривна)</item>
-        <item>₽ (рубль)</item>
+        <item>₴ (UAH)</item>
+        <item>₽ (RUR)</item>
     </string-array>
 
     <string-array name="safe_entries">
-        <item>Комиссию оплачивает заказчик</item>
-        <item>Комиссию оплачиваю я</item>
-        <item>Комиссия делится пополам</item>
-        <item>Прямой расчет</item>
+        <item>Customer pays commission</item>
+        <item>I pay the commission</item>
+        <item>Commission is divided in half</item>
+        <item>Direct pay</item>
     </string-array>
 
 </resources>
