[+] app language preference

--- a/app/src/main/res/layout/activity_employer_detail.xml
+++ b/app/src/main/res/layout/activity_employer_detail.xml
@@ -296,19 +296,19 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:icon="@drawable/overview"
-                android:text="Профиль" />
+                android:text="@string/profile" />
 
             <com.google.android.material.tabs.TabItem
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:icon="@drawable/project"
-                android:text="Проекты" />
+                android:text="@string/projects" />
 
             <com.google.android.material.tabs.TabItem
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:icon="@drawable/reviews"
-                android:text="Отзывы" />
+                android:text="@string/reviews" />
 
         </com.google.android.material.tabs.TabLayout>
 
