--- a/app/src/main/res/layout/activity_contest_detail.xml
+++ b/app/src/main/res/layout/activity_contest_detail.xml
@@ -198,13 +198,13 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:icon="@drawable/trophy"
-                android:text="О конкурсе" />
+                android:text="@string/about_contest" />
 
             <com.google.android.material.tabs.TabItem
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:icon="@drawable/reviews"
-                android:text="Обсуждение" />
+                android:text="@string/comments" />
 
         </com.google.android.material.tabs.TabLayout>
 
